test/samples/valid/polymorphic_struct.maruir
struct S<M> {
	arr: uint256[] *M;
}

fun foo(s: S<memory> *memory)
locals ptr: uint[] * memory;
{
	entry:

	load s.arr in ptr;
	return;
}
