test/samples/invalid/tc/alloc4.maruir
struct Foo<M> {
    arr: uint8[] *M;
}

fun main<;T>(size: uint256)
locals
    p1: uint8[] *#memory,
    p2: Foo<#storage> *#storage;
{
    entry:
        p1 := alloc uint8[size] in #memory;
        p2 := alloc T in #storage;
        return;
}